--- a/VKRenderEngine.vcxproj
+++ b/VKRenderEngine.vcxproj
@@ -171,6 +171,9 @@ spv.bat</Command>
     <None Include="Shaders\main.vert" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Application.h" />
+    <ClInclude Include="src\Camera.h" />
+    <ClInclude Include="src\DeltaTime.h" />
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\Vertex.h" />
   </ItemGroup>
